--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production node ./bin/server.js",
-    "start:dev": "cross-env NODE_ENV=development nodemon ./bin/server.js",
+    "start:dev": "cross-env NODE_ENV=development nodemon -r dotenv/config  --experimental-specifier-resolution=node ./bin/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,8 +22,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "joi": "^17.6.0",
+    "mongoose": "^6.2.0",
     "morgan": "^1.10.0",
     "uuidv4": "^6.2.12"
   },
