--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.0",
     "morgan": "^1.10.0",
+    "swagger-ui-express": "^4.3.0",
     "uuidv4": "^6.2.12"
   },
   "devDependencies": {
