added new instruction to .example.env file

--- a/.example.env
+++ b/.example.env
@@ -1,3 +1,4 @@
 PORT = {type your port}
 URI_DB = {add your connection string MongoDB Atlas}
 JWT_SECRET_KEY = {type secret key} 
+REACT_APP_GOOGLE_CLIENT_ID = {you need to know google cliend id}
