--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node ./bin/server.js",
+    "start": "cross-env NODE_ENV=production node -r dotenv/config --experimental-specifier-resolution=node ./bin/server.js",
     "start:dev": "cross-env NODE_ENV=development nodemon -r dotenv/config  --experimental-specifier-resolution=node ./bin/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
